--- a/notebooks/05-sequences.ipynb
+++ b/notebooks/05-sequences.ipynb
@@ -8,7 +8,34 @@
     }
    },
    "source": [
-    "# Dictionaries "
+    "# Sequences \n",
+    "\n",
+    "* A sequence is an ordered collection of values\n",
+    "* A powerful, fundamental abstraction\n",
+    "* Not instances of a particular built-in type\n",
+    "* Many types but they all share common behavior: \n",
+    "    - length \n",
+    "    - element selection \n",
+    "    \n",
+    "_Composing Programs_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Lists"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lists are a sequence that can have arbitrary length. Extremelely powerful and useful. "
    ]
   },
   {
@@ -22,8 +49,16 @@
    },
    "outputs": [],
    "source": [
-    "# recall lists \n",
-    "lst = [ 1, 2, 3, 4 ]"
+    "digits = [     1, 8, 2, 8    ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "digits"
    ]
   },
   {
@@ -36,11 +71,7 @@
    },
    "outputs": [],
    "source": [
-    "d = {\n",
-    "    \"package\": \"A package is a module that can be added to any program\", \n",
-    "    \"random\":         \"Any data or information that has no order\",\n",
-    "    \"unary operator\": \"An operator that takes only one value for its operation\" \n",
-    "} "
+    "len(digits) "
    ]
   },
   {
@@ -48,12 +79,101 @@
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [],
    "source": [
-    "d['random']"
+    "v = 0 \n",
+    "digits[0]   # this is called 0-based indexes "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "digits[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "digits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "1 in digits     # membership check "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "88 in digits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(Visualize lists in tutor.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Let's do some interesting stuff with lists. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def make_tea(ing):\n",
+    "    for i in ing: \n",
+    "        print(\"Put\", i, \"in.\")\n",
+    "        \n",
+    "        \n",
+    "ingredients = ['water', 'milk', 'cinnamon', 'tea leaves']\n",
+    "make_tea(ingredients)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "seq = [1, 2, 8, 4, 6, 8, 9, 15]"
    ]
   },
   {
@@ -67,7 +187,83 @@
    },
    "outputs": [],
    "source": [
-    "d['variable'] = \"xy\""
+    "def count(s, value):\n",
+    "    \"\"\"Count how many times value occurs in s\"\"\"\n",
+    "    counter = 0 \n",
+    "    \n",
+    "    for i in s: \n",
+    "        \n",
+    "        if i == value : \n",
+    "            counter = counter + 1\n",
+    "            \n",
+    "    return counter "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count(seq, 88)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "count(seq, 8)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Modifying elements is the same "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "digits = [1, 2, 3, 4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "digits[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "digits[1] = 0"
    ]
   },
   {
@@ -80,20 +276,7 @@
    },
    "outputs": [],
    "source": [
-    "d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "d['python']"
+    "digits"
    ]
   },
   {
@@ -104,125 +287,7 @@
     }
    },
    "source": [
-    "## Iterating over dictionaries"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for k in d:\n",
-    "    v = d[k]\n",
-    "    print(k, \"=\", v)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "'package' in d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "'else' in d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "if 'else' not in d:   # you can move the 'not'\n",
-    "    print(\"The keyword 'else' is not in d... how can this be?\")\n",
-    "else: \n",
-    "    print(\"This keyword was found.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "list ( d.items()  )       # returns a list of tuples! "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "Now, we can iterate over them the same way we iterated over `[ [1, 2], [2, 2] ]`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for k, v in d.items():      # can also loop over dict items\n",
-    "    print(k, \"=\", v)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Using dict for configuration "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "autograder_conf = { \n",
-    "    'url' : '121.52.146.108:8000', \n",
-    "    'username' : 'p1111111', \n",
-    "    'submission_pass' : 'abc-334'\n",
-    "}\n",
-    "\n",
-    "print('Connecting to', autograder_conf['url'])"
+    "### Other methods of element selection "
    ]
   },
   {
@@ -236,13 +301,7 @@
    },
    "outputs": [],
    "source": [
-    "num_names = {\n",
-    "    1: \"one\", \n",
-    "    2: \"two\", \n",
-    "    3: \"three\",\n",
-    "    20: 'twenty', \n",
-    "    30: \"thirty\", \n",
-    "}\n"
+    "digits = [   1, 5, 4,  6, 7, 9   ]"
    ]
   },
   {
@@ -251,59 +310,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_names[30]"
+    "digits[1:3]      # stops just before index: 3"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "v = '1'\n",
-    "num_names[ v ]"
+    "len(digits)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "num_names[  int(v)  ]   "
+    "digits[-4:-1]"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "This is called **datatype casting**. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Reading Assignment\n",
-    "\n",
-    "Composing Programs. 2.4.3 Dictionaries (http://www.composingprograms.com/pages/24-mutable-data.html#dictionaries)"
+    "digits[2:] # stops just before index:3 "
    ]
   }
  ],
@@ -325,6 +359,10 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.3"
+  },
+  "livereveal": {
+   "scroll": true,
+   "transition": "fade"
   }
  },
  "nbformat": 4,
